--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Barbearia MP</title>
     <link rel = "styleshet" href = "style.css">
 </head>
+
+<header>
+  <h1>Barbearia Felca</h1>  
+
+  <ul>
+    <li>Horario de atendimento</li>
+    <li>Meus produtos</li>
+    <li>Saiba mais</li>
+  </ul>
+</header>
+
 <body>
     <h1>Sobre a Barbearia Felca</h1>
     <p class = "paragrafo-1">Localizada no coração da cidade a Barbearia Felca traz o que há de melhor para seu cabelo e barba</p>
@@ -24,6 +35,13 @@ garantindo qualidade e satisfação dos nossos clientes.</p>
  </ul>
 
     <img class = "imagem-2" src ="beneficios (1).jpg" alt="imagem beneficios">
+
+<footer>
+    <p>Para mais informações acesse os contatos abaixo</p>
+    <p>@barbeariafelca</p>
+    <P>Barbearia Felca</P>
+    <p>(42) 9997-7845</p>
+</footer>
 
 </body>
 </html>
