--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <title>Barbearia MP</title>
-    <link rel = "styleshet" href = "style.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 
 <header>
@@ -34,7 +34,7 @@ garantindo qualidade e satisfação dos nossos clientes.</p>
     <li>Clientes satisfeitos</li>
  </ul>
 
-    <img class = "imagem-2" src ="beneficios (1).jpg" alt="imagem beneficios">
+    <img class = "imagem-2" src ="beneficios.jpg" alt="imagem beneficios">
 
 <footer>
     <p>Para mais informações acesse os contatos abaixo</p>
